--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 :root {
-    --distanceBetweenButtons: 0.5rem;
+    --distanceBetweenButtons: 1rem;
     --animationDuration: 300ms;
     --colorNormal: rgb(110,132,163);
     --colorActive: #232d4f;
@@ -10,6 +10,8 @@
 
     --sidebarWidth: 15rem;
 }
+
+
 
 .sidebar-dropdownItem, .sidebarHeader {
     transition: var(--animationDuration);
@@ -120,10 +122,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: calc(100vh);
 
     padding-top: 0.75rem;
     border-right-width: 1px;
+    overflow-y: scroll;
 }
 .active:first-child {
     transition: var(--animationDuration);
@@ -140,4 +143,12 @@
     padding-bottom: 0.75rem;
     padding-top: 0.75rem;
     font-family: monospace;
+}
+
+.sidebar > * {
+    color: var(--colorNormal);
+}
+
+.sidebar::-webkit-scrollbar {
+    display: none;
 }
